// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Recombee's addRating destination action: all fields 1`] = `
Object {
  "additionalData": Object {
    "testType": "ANsNPl1sV!#5(%#",
  },
  "cascadeCreate": true,
  "itemId": "ANsNPl1sV!#5(%#",
  "rating": 29019912231976.96,
  "recommId": "ANsNPl1sV!#5(%#",
  "timestamp": "ANsNPl1sV!#5(%#",
  "userId": "ANsNPl1sV!#5(%#",
}
`;

exports[`Testing snapshot for Recombee's addRating destination action: required fields 1`] = `
Object {
  "cascadeCreate": true,
  "itemId": "ANsNPl1sV!#5(%#",
  "rating": 29019912231976.96,
  "userId": "ANsNPl1sV!#5(%#",
}
`;
